--- a/index.html
+++ b/index.html
@@ -2,155 +2,203 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>TikTok Glow Flowers</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Birthday!</title>
 <style>
-body {
-  margin: 0;
-  background: black;
-  overflow: hidden;
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: black;
 }
-canvas {
-  display: block;
-  margin: auto;
-}
+canvas { display:block; }
 </style>
 </head>
-
 <body>
+<div id="countdown"></div>
+<canvas id="canvas"></canvas>
 <script>
-let flowers = [];
-let particles = [];
-let timerStart;
-let countdown = 10;
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-function setup() {
-  createCanvas(400, 700);
-  angleMode(RADIANS);
-  timerStart = millis();
+/* ================= SPARKLES ================= */
+let sparkles = Array.from({length:150},()=>({
+    x:Math.random()*canvas.width,
+    y:Math.random()*canvas.height,
+    r:Math.random()*1.5+0.4,
+    a:Math.random()*Math.PI*2,
+    v:Math.random()*0.015+0.003
+}));
 
-  // background sparkles
-  for (let i = 0; i < 120; i++) {
-    particles.push({
-      x: random(width),
-      y: random(height),
-      a: random(40, 120),
-      s: random(1, 2)
+/* ================= HEART SPARKLES ================= */
+let heartSparkles = Array.from({length:50},()=>({
+    x:Math.random()*canvas.width,
+    y:Math.random()*canvas.height,
+    r:Math.random()*4+2,
+    a:Math.random()*Math.PI*2,
+    v:Math.random()*0.02+0.005
+}));
+
+function drawSparkles(){
+    sparkles.forEach(s => {
+        s.a += s.v;
+        ctx.fillStyle = `rgba(255,255,255,${0.35+Math.sin(s.a)*0.25})`;
+        ctx.shadowColor = '#fff';
+        ctx.shadowBlur = 12;
+        ctx.beginPath();
+        ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
+        ctx.fill();
     });
-  }
-
-  // flowers
-  for (let i = -1; i <= 1; i++) {
-    flowers.push(new Flower(i * 45, random(0, TWO_PI)));
-  }
+    heartSparkles.forEach(h => {
+        h.a += h.v;
+        ctx.fillStyle = `rgba(255,182,193,${0.4+Math.sin(h.a)*0.3})`;
+        ctx.shadowColor = '#ffb6c1';
+        ctx.shadowBlur = 12;
+        ctx.beginPath();
+        // Draw heart shape
+        const r = h.r;
+        ctx.moveTo(h.x, h.y - r/2);
+        ctx.bezierCurveTo(h.x - r, h.y - r, h.x - r, h.y + r/2, h.x, h.y + r);
+        ctx.bezierCurveTo(h.x + r, h.y + r/2, h.x + r, h.y - r, h.x, h.y - r/2);
+        ctx.fill();
+    });
 }
 
-function draw() {
-  background(6, 10, 14);
-
-  drawParticles();
-
-  let elapsed = floor((millis() - timerStart) / 1000);
-  countdown = max(10 - elapsed, 0);
-
-  if (countdown > 0) {
-    drawCountdown();
-  } else {
-    translate(width / 2, height - 90);
-    drawGrass();
-    for (let f of flowers) f.update();
-  }
-}
-
-/* ---------- PARTICLES ---------- */
-function drawParticles() {
-  noStroke();
-  for (let p of particles) {
-    fill(180, 220, 200, p.a);
-    circle(p.x, p.y, p.s);
-  }
-}
-
-/* ---------- COUNTDOWN ---------- */
-function drawCountdown() {
-  textAlign(CENTER, CENTER);
-  textSize(72);
-  fill(200, 200, 200, 180);
-  drawingContext.shadowBlur = 25;
-  drawingContext.shadowColor = "rgba(200,200,200,0.6)";
-  text(countdown, width / 2, height / 2);
-}
-
-/* ---------- FLOWER CLASS ---------- */
-class Flower {
-  constructor(x, phase) {
-    this.x = x;
-    this.phase = phase;
-    this.grow = 0;
-    this.bloom = 0;
-  }
-
-  update() {
-    push();
-    translate(this.x, 0);
-
-    let sway = sin(frameCount * 0.01 + this.phase) * 0.15;
-    rotate(sway);
-
-    this.grow = min(this.grow + 0.7, 230);
-    stroke(110, 230, 160);
-    strokeWeight(3);
-    noFill();
-    beginShape();
-    curveVertex(0, 0);
-    curveVertex(0, 0);
-    curveVertex(4, -this.grow / 2);
-    curveVertex(0, -this.grow);
-    curveVertex(0, -this.grow);
-    endShape();
-
-    if (this.grow > 200) {
-      this.bloom = min(this.bloom + 0.4, 28);
-      drawGlowFlower(0, -this.grow, this.bloom);
+/* ================= FIREWORKS ================= */
+class FireworkParticle {
+    constructor(x, y, angle, speed, color) {
+        this.x = x;
+        this.y = y;
+        this.angle = angle;
+        this.speed = speed;
+        this.color = color;
+        this.life = 60;
     }
-    pop();
-  }
+    update() {
+        this.x += Math.cos(this.angle) * this.speed;
+        this.y += Math.sin(this.angle) * this.speed;
+        this.speed *= 0.95;
+        this.life--;
+    }
+    draw() {
+        ctx.fillStyle = this.color;
+        ctx.shadowColor = this.color;
+        ctx.shadowBlur = 12;
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, 3, 0, Math.PI*2);
+        ctx.fill();
+    }
 }
 
-/* ---------- FLOWER DRAW ---------- */
-function drawGlowFlower(x, y, s) {
-  push();
-  translate(x, y);
-
-  for (let g = 20; g > 0; g--) {
-    fill(255, 130, 160, 6);
-    circle(0, 0, s * g * 0.15);
-  }
-
-  for (let i = 0; i < 5; i++) {
-    let a = TWO_PI / 5 * i;
-    let px = cos(a) * s;
-    let py = sin(a) * s * 0.7;
-    fill(255, 150, 180, 200);
-    ellipse(px, py, s * 1.1, s * 0.6);
-  }
-
-  fill(255, 230, 180);
-  circle(0, 0, s * 0.6);
-
-  pop();
+let fireworks = [];
+function spawnFirework(){
+    const sides = [0, canvas.width];
+    const x = sides[Math.floor(Math.random()*2)];
+    const y = Math.random() * canvas.height * 0.5;
+    const colors = ['#ff0000','#ff7f00','#ffff00','#00ff00','#0000ff','#4b0082','#9400d3','#ffffff'];
+    const color = colors[Math.floor(Math.random()*colors.length)];
+    for(let i=0; i<80; i++){
+        const angle = Math.random()*Math.PI*2;
+        const speed = Math.random()*4+2;
+        fireworks.push(new FireworkParticle(x, y, angle, speed, color));
+    }
 }
 
-/* ---------- GRASS ---------- */
-function drawGrass() {
-  stroke(90, 200, 140);
-  strokeWeight(2);
-  for (let i = -90; i <= 90; i += 10) {
-    let h = random(40, 80);
-    line(i, 0, i + random(-6, 6), -h);
-  }
+/* ================= SNOWDROP FLOWER ================= */
+let growth=0, sway=0;
+const growthSpeed = 0.02;
+
+function drawStem(x0, y0, x1, y1, w, color){
+    ctx.strokeStyle=color;
+    ctx.lineWidth=w;
+    ctx.lineCap='round';
+    ctx.shadowColor=color;
+    ctx.shadowBlur=8;
+    ctx.beginPath();
+    ctx.moveTo(x0,y0);
+    ctx.quadraticCurveTo((x0+x1)/2 + Math.sin(sway)*8, y0-40, x1, y1);
+    ctx.stroke();
 }
+
+function drawLeaf(x, y, angle, color){
+    ctx.save();
+    ctx.translate(x,y);
+    ctx.rotate(angle);
+    ctx.fillStyle=color;
+    ctx.shadowColor=color;
+    ctx.shadowBlur=6;
+    ctx.beginPath();
+    ctx.ellipse(0,0,18,8,0,0,Math.PI*2);
+    ctx.fill();
+    ctx.restore();
+}
+
+function drawSnowdrop(x,y,s){
+    ctx.save(); ctx.translate(x,y); ctx.scale(s,s);
+    ctx.shadowColor='#fff'; ctx.shadowBlur=15;
+    for(let i=0;i<5;i++){
+        ctx.rotate(Math.PI*2/5);
+        ctx.beginPath();
+        ctx.moveTo(0,0);
+        ctx.bezierCurveTo(-6,14,-4,28,0,38);
+        ctx.bezierCurveTo(4,28,6,14,0,0);
+        ctx.fillStyle='#ffffff'; ctx.fill();
+        ctx.strokeStyle='rgba(200,200,200,0.25)'; ctx.stroke();
+    }
+    ctx.restore();
+}
+
+function drawBouquet(){
+    const cx = canvas.width/2;
+    const baseY = canvas.height*0.8;
+    const rootX = cx;
+    const rootY = baseY+40;
+    const branches = [
+        {dx:-30,h:150},
+        {dx:-15,h:170},
+        {dx:0,h:190},
+        {dx:15,h:170},
+        {dx:30,h:150},
+        {dx:-10,h:130},
+        {dx:10,h:140}
+    ];
+    branches.forEach(b => {
+        const tipX = cx + b.dx + Math.sin(sway*2)*6;
+        const tipY = baseY - b.h*growth;
+        drawStem(rootX, rootY, tipX, tipY, 5, '#3a7d6f');
+        drawLeaf(tipX-6, tipY+25, -0.5, '#3a7d6f');
+        drawLeaf(tipX+6, tipY+30, 0.5, '#0b3d2e');
+        drawSnowdrop(tipX, tipY, 0.9);
+    });
+}
+
+function animate(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    drawSparkles();
+    if(Math.random()<0.04) spawnFirework();
+    fireworks.forEach((f,i)=>{
+        f.update(); f.draw(); if(f.life<=0) fireworks.splice(i,1);
+    });
+    if(growth<1) growth+=growthSpeed;
+    sway+=0.02;
+    drawBouquet();
+    requestAnimationFrame(animate);
+}
+
+let countdown=document.getElementById('countdown');
+let count=10; countdown.textContent=count;
+let timer=setInterval(()=>{
+    count--; countdown.textContent=count;
+    if(count<=0){
+        clearInterval(timer);
+        countdown.style.display='none';
+        animate();
+    }
+},1000);
 </script>
 </body>
 </html>
