--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@ body, html {
     background: black;
 }
 canvas { display:block; }
-#letterDiv {
-    position: absolute;
-    top: 10%;
-    width: 100%;
-    text-align: center;
-    color: white;
-    font-size: 24px;
-    font-family: cursive;
-}
 #countdown {
     position: absolute;
     top: 40%;
@@ -35,29 +26,21 @@ canvas { display:block; }
 </style>
 </head>
 <body>
-<div id="letterDiv"></div>
 <div id="countdown"></div>
 <canvas id="canvas"></canvas>
 <script>
-// ====== Write your letter here ======
-let letter = prompt("Write a little letter for your friend:");
-
 const canvas = document.getElementById('canvas');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-let letterDiv = document.getElementById('letterDiv');
-letterDiv.innerText = letter;
-
 /* ================= SPARKLES ================= */
 let sparkles = Array.from({length:150},()=>({ x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:Math.random()*1.5+0.4, a:Math.random()*Math.PI*2, v:Math.random()*0.015+0.003 }));
 let heartSparkles = Array.from({length:50},()=>({ x:Math.random()*canvas.width, y:Math.random()*canvas.height, r:Math.random()*4+2, a:Math.random()*Math.PI*2, v:Math.random()*0.02+0.005 }));
-
 function drawSparkles(){
     sparkles.forEach(s => { s.a += s.v; ctx.fillStyle = `rgba(255,255,255,${0.35+Math.sin(s.a)*0.25})`; ctx.shadowColor = '#fff'; ctx.shadowBlur = 12; ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fill(); });
     heartSparkles.forEach(h => { h.a += h.v; ctx.fillStyle = `rgba(255,182,193,${0.4+Math.sin(h.a)*0.3})`; ctx.shadowColor = '#ffb6c1'; ctx.shadowBlur = 12; const r=h.r; ctx.beginPath(); ctx.moveTo(h.x, h.y - r/2); ctx.bezierCurveTo(h.x - r, h.y - r, h.x - r, h.y + r/2, h.x, h.y + r); ctx.bezierCurveTo(h.x + r, h.y + r/2, h.x + r, h.y - r, h.x, h.y - r/2); ctx.fill(); });
-}
+});
 
 /* ================= FIREWORKS ================= */
 class FireworkParticle { constructor(x, y, angle, speed, color) { this.x=x; this.y=y; this.angle=angle; this.speed=speed; this.color=color; this.life=60; } update(){ this.x+=Math.cos(this.angle)*this.speed; this.y+=Math.sin(this.angle)*this.speed; this.speed*=0.95; this.life--; } draw(){ ctx.fillStyle=this.color; ctx.shadowColor=this.color; ctx.shadowBlur=12; ctx.beginPath(); ctx.arc(this.x,this.y,3,0,Math.PI*2); ctx.fill(); } }
@@ -94,7 +77,7 @@ function animate(){
     requestAnimationFrame(animate);
 }
 
-// ====== Countdown with letter displayed ======
+// ====== Countdown ======
 let countdown=document.getElementById('countdown');
 let count=10; countdown.textContent=count;
 let timer=setInterval(()=>{
@@ -102,8 +85,12 @@ let timer=setInterval(()=>{
     if(count<=0){
         clearInterval(timer);
         countdown.style.display='none';
-        letterDiv.style.display='none'; // hide letter after countdown
         animate();
+        // Prompt for letter AFTER bouquet is fully blooming
+        setTimeout(()=>{
+            let letter = prompt("Write a little letter for your friend:");
+            if(letter) alert(letter); // or display it however you want
+        }, 3000); // delay to allow flowers to bloom a bit
     }
 },1000);
 </script>
