--- a/index.html
+++ b/index.html
@@ -40,30 +40,103 @@ let heartSparkles = Array.from({length:50},()=>({ x:Math.random()*canvas.width, 
 function drawSparkles(){
     sparkles.forEach(s => { s.a += s.v; ctx.fillStyle = `rgba(255,255,255,${0.35+Math.sin(s.a)*0.25})`; ctx.shadowColor = '#fff'; ctx.shadowBlur = 12; ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fill(); });
     heartSparkles.forEach(h => { h.a += h.v; ctx.fillStyle = `rgba(255,182,193,${0.4+Math.sin(h.a)*0.3})`; ctx.shadowColor = '#ffb6c1'; ctx.shadowBlur = 12; const r=h.r; ctx.beginPath(); ctx.moveTo(h.x, h.y - r/2); ctx.bezierCurveTo(h.x - r, h.y - r, h.x - r, h.y + r/2, h.x, h.y + r); ctx.bezierCurveTo(h.x + r, h.y + r/2, h.x + r, h.y - r, h.x, h.y - r/2); ctx.fill(); });
-});
+}
 
 /* ================= FIREWORKS ================= */
-class FireworkParticle { constructor(x, y, angle, speed, color) { this.x=x; this.y=y; this.angle=angle; this.speed=speed; this.color=color; this.life=60; } update(){ this.x+=Math.cos(this.angle)*this.speed; this.y+=Math.sin(this.angle)*this.speed; this.speed*=0.95; this.life--; } draw(){ ctx.fillStyle=this.color; ctx.shadowColor=this.color; ctx.shadowBlur=12; ctx.beginPath(); ctx.arc(this.x,this.y,3,0,Math.PI*2); ctx.fill(); } }
+class FireworkParticle {
+    constructor(x, y, angle, speed, color) {
+        this.x = x;
+        this.y = y;
+        this.angle = angle;
+        this.speed = speed;
+        this.color = color;
+        this.life = 60;
+    }
+    update() {
+        this.x += Math.cos(this.angle) * this.speed;
+        this.y += Math.sin(this.angle) * this.speed;
+        this.speed *= 0.95;
+        this.life--;
+    }
+    draw() {
+        ctx.fillStyle = this.color;
+        ctx.shadowColor = this.color;
+        ctx.shadowBlur = 12;
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, 3, 0, Math.PI*2);
+        ctx.fill();
+    }
+}
 let fireworks=[];
 function spawnFirework(){
-    const sides=[0,canvas.width];
-    const x=sides[Math.floor(Math.random()*2)];
-    const y=Math.random()*canvas.height*0.5;
-    const colors=['#ff0000','#ff7f00','#ffff00','#00ff00','#0000ff','#4b0082','#9400d3','#ffffff'];
-    const color=colors[Math.floor(Math.random()*colors.length)];
-    for(let i=0;i<80;i++){ const angle=Math.random()*Math.PI*2; const speed=Math.random()*4+2; fireworks.push(new FireworkParticle(x,y,angle,speed,color)); }
+    const sides = [0, canvas.width];
+    const x = sides[Math.floor(Math.random()*2)];
+    const y = Math.random() * canvas.height * 0.5;
+    const colors = ['#ff0000','#ff7f00','#ffff00','#00ff00','#0000ff','#4b0082','#9400d3','#ffffff'];
+    const color = colors[Math.floor(Math.random()*colors.length)];
+    for(let i=0;i<80;i++){
+        const angle = Math.random()*Math.PI*2;
+        const speed = Math.random()*4+2;
+        fireworks.push(new FireworkParticle(x, y, angle, speed, color));
+    }
 }
 
 /* ================= SNOWDROP FLOWER ================= */
-let growth=0, sway=0;
-const growthSpeed=0.008;
-function drawStem(x0,y0,x1,y1,w,color){ ctx.strokeStyle=color; ctx.lineWidth=w; ctx.lineCap='round'; ctx.shadowColor=color; ctx.shadowBlur=8; ctx.beginPath(); ctx.moveTo(x0,y0); ctx.quadraticCurveTo((x0+x1)/2+Math.sin(sway)*8,y0-40,x1,y1); ctx.stroke(); }
-function drawLeaf(x,y,angle,color){ ctx.save(); ctx.translate(x,y); ctx.rotate(angle); ctx.fillStyle=color; ctx.shadowColor=color; ctx.shadowBlur=6; ctx.beginPath(); ctx.ellipse(0,0,18,8,0,0,Math.PI*2); ctx.fill(); ctx.restore(); }
-function drawSnowdrop(x,y,s){ ctx.save(); ctx.translate(x,y); ctx.scale(s,s); ctx.shadowColor='#fff'; ctx.shadowBlur=15; for(let i=0;i<5;i++){ ctx.rotate(Math.PI*2/5); ctx.beginPath(); ctx.moveTo(0,0); ctx.bezierCurveTo(-6,14,-4,28,0,38); ctx.bezierCurveTo(4,28,6,14,0,0); ctx.fillStyle='#ffffff'; ctx.fill(); ctx.strokeStyle='rgba(200,200,200,0.25)'; ctx.stroke(); } ctx.restore(); }
-function drawBouquet(){
-    const cx=canvas.width/2, baseY=canvas.height*0.8, rootX=cx, rootY=baseY+40;
-    const branches=[{dx:-30,h:150},{dx:-15,h:170},{dx:0,h:190},{dx:15,h:170},{dx:30,h:150},{dx:-10,h:130},{dx:10,h:140}];
-    branches.forEach(b=>{ const tipX=cx+b.dx+Math.sin(sway*2)*6; const tipY=baseY-b.h*growth; drawStem(rootX,rootY,tipX,tipY,5,'#3a7d6f'); drawLeaf(tipX-6,tipY+25,-0.5,'#3a7d6f'); drawLeaf(tipX+6,tipY+30,0.5,'#0b3d2e'); drawSnowdrop(tipX,tipY,0.9); });
+let growth = 0, sway = 0;
+const growthSpeed = 0.008;
+function drawStem(x0, y0, x1, y1, w, color) {
+    ctx.strokeStyle = color;
+    ctx.lineWidth = w;
+    ctx.lineCap = 'round';
+    ctx.shadowColor = color;
+    ctx.shadowBlur = 8;
+    ctx.beginPath();
+    ctx.moveTo(x0, y0);
+    ctx.quadraticCurveTo((x0+x1)/2 + Math.sin(sway)*8, y0-40, x1, y1);
+    ctx.stroke();
+}
+function drawLeaf(x, y, angle, color) {
+    ctx.save();
+    ctx.translate(x, y);
+    ctx.rotate(angle);
+    ctx.fillStyle = color;
+    ctx.shadowColor = color;
+    ctx.shadowBlur = 6;
+    ctx.beginPath();
+    ctx.ellipse(0,0,18,8,0,0,Math.PI*2);
+    ctx.fill();
+    ctx.restore();
+}
+function drawSnowdrop(x, y, s) {
+    ctx.save();
+    ctx.translate(x, y);
+    ctx.scale(s, s);
+    ctx.shadowColor = '#fff';
+    ctx.shadowBlur = 15;
+    for(let i=0;i<5;i++){
+        ctx.rotate(Math.PI*2/5);
+        ctx.beginPath();
+        ctx.moveTo(0,0);
+        ctx.bezierCurveTo(-6,14,-4,28,0,38);
+        ctx.bezierCurveTo(4,28,6,14,0,0);
+        ctx.fillStyle = '#ffffff';
+        ctx.fill();
+        ctx.strokeStyle = 'rgba(200,200,200,0.25)';
+        ctx.stroke();
+    }
+    ctx.restore();
+}
+function drawBouquet() {
+    const cx = canvas.width/2, baseY = canvas.height*0.8, rootX = cx, rootY = baseY+40;
+    const branches = [{dx:-30,h:150},{dx:-15,h:170},{dx:0,h:190},{dx:15,h:170},{dx:30,h:150},{dx:-10,h:130},{dx:10,h:140}];
+    branches.forEach(b => {
+        const tipX = cx + b.dx + Math.sin(sway*2)*6;
+        const tipY = baseY - b.h*growth;
+        drawStem(rootX, rootY, tipX, tipY, 5, '#3a7d6f');
+        drawLeaf(tipX-6, tipY+25, -0.5, '#3a7d6f');
+        drawLeaf(tipX+6, tipY+30, 0.5, '#0b3d2e');
+        drawSnowdrop(tipX, tipY, 0.9);
+    });
 }
 
 function animate(){
@@ -78,21 +151,34 @@ function animate(){
 }
 
 // ====== Countdown ======
-let countdown=document.getElementById('countdown');
-let count=10; countdown.textContent=count;
-let timer=setInterval(()=>{
-    count--; countdown.textContent=count;
-    if(count<=0){
+let countdown = document.getElementById('countdown');
+let count = 10; countdown.textContent = count;
+let timer = setInterval(()=>{
+    count--;
+    countdown.textContent = count;
+    if(count <= 0){
         clearInterval(timer);
-        countdown.style.display='none';
+        countdown.style.display = 'none';
         animate();
-        // Prompt for letter AFTER bouquet is fully blooming
-        setTimeout(()=>{
-            let letter = prompt("Write a little letter for your friend:");
-            if(letter) alert(letter); // or display it however you want
-        }, 3000); // delay to allow flowers to bloom a bit
-    }
-},1000);
-</script>
-</body>
-</html>
+
+        // ====== Cinematic Letter with wrapping ======
+        let letter = "To the birthday boy of my dreams, Happy birthdayy!! You're finally older than my grandfather, but I'll still love you. I will forever cherish the day that you, my safe place, were born. I wish you the sweetest and most heartfelt birthday, even if I can't be there to hug you, I'll do my part in celebrating by eating cake! Thank you for existing, here in my life. I'm so grateful and proud of the wonderful person you are. I love you more than I could ever express with words, so please, have the best birthday todayy and happy new years! Mwah, your sweet girl :)"  ;
+        let letterDiv = document.createElement('div');
+        letterDiv.style.position = 'absolute';
+        letterDiv.style.top = '10%';
+        letterDiv.style.width = '60%';
+        letterDiv.style.margin = '0 auto';
+        letterDiv.style.textAlign = 'center';
+        letterDiv.style.color = 'white';
+        letterDiv.style.fontSize = '28px';
+        letterDiv.style.fontFamily = 'cursive';
+        letterDiv.style.letterSpacing = '2px';
+        letterDiv.style.wordWrap = 'break-word';
+        letterDiv.style.whiteSpace = 'pre-wrap';
+        document.body.appendChild(letterDiv);
+
+        function typeLetter(text, element, index = 0){
+            if(index < text.length){
+                element.innerHTML += text[index];
+                index++;
+                setTimeout(()=>typeLetter(text, element, in
