--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@ canvas { display: block; }
 <script>
 console.log("Script started");
 
-// ===== LETTER =====
-const LETTER_TEXT = `To my sweetest birthday boy, Happy birthday!
+// ===== YOUR LETTER 
+const LETTER_TEXT = `Happy birthday 🤍
 I hope this year brings you warmth, laughter,
-and many beautiful moments. I'll always cherish the day that
-you were born, and I'm equally grateful to have you with me every day.
-Despite being miles apart, thank you, for being my sweet place 
-Happy birthday and I love you.`;
+and many beautiful moments. Thank you
+for being my safe place.
+I love you`;
 
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
