--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ canvas { display: block; }
 console.log("Script started");
 
 // ===== YOUR LETTER 
-const LETTER_TEXT = `Happy birthday 🤍
+const LETTER_TEXT = `Happy birthday Rayan <3 🤍
 I hope this year brings you warmth, laughter,
 and many beautiful moments. Thank you
 for being my safe place.
